force-app/main/default/objects/Integration_Settings__c/fields/BookmarkKey__c.field-meta.xml
<CustomField>
    <fullName>BookmarkKey__c</fullName>
    <label>BookmarkKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>