force-app/main/default/objects/Integration_Settings__c/fields/Buffer_days__c.field-meta.xml
<CustomField>
    <fullName>Buffer_days__c</fullName>
    <label>Buffer days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>