force-app/main/default/objects/Integration_Settings__c/fields/Integration_day_of_Week__c.field-meta.xml
<CustomField>
    <fullName>Integration_day_of_Week__c</fullName>
    <label>Integration day of Week</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>