force-app/main/default/objects/Integration_Settings__c/fields/Integration_Start_Date_Time_2nd_run__c.field-meta.xml
<CustomField>
    <fullName>Integration_Start_Date_Time_2nd_run__c</fullName>
    <label>Integration Start Date/Time 2nd run</label>
    <type>DateTime</type>
</CustomField>