force-app/main/default/objects/Integration_Settings__c/fields/Integration_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Integration_Start_Date_Time__c</fullName>
    <label>Integration Start Date/Time</label>
    <type>DateTime</type>
</CustomField>