force-app/main/default/objects/Integration_Settings__c/fields/Next_Process__c.field-meta.xml
<CustomField>
    <fullName>Next_Process__c</fullName>
    <label>Next Process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>