force-app/main/default/objects/Integration_Settings__c/fields/Next_Process_Delay__c.field-meta.xml
<CustomField>
    <fullName>Next_Process_Delay__c</fullName>
    <label>Next Process Delay</label>
    <length>5</length>
    <type>Text</type>
</CustomField>