force-app/main/default/objects/Integration_Settings__c/fields/Offset__c.field-meta.xml
<CustomField>
    <fullName>Offset__c</fullName>
    <label>Offset</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>